force-app/main/default/objects/Aha_Idea_Link__c/Aha_Idea_Link__c.object-meta.xml
<CustomObject>
    <label>Aha Idea Link</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Idea Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aha Idea Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>