force-app/main/default/objects/Aha_Idea_Link__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>This field is used to Store the Opportunity or Case Account Name which is linked with idea</description>
    <formula>IF(
	NOT(ISBLANK(Case_Number__c)),
	Case_Number__r.Account.Name,
		IF(
			NOT(ISBLANK(Opportunity_Name__c)),
			Opportunity_Name__r.Account.Name ,
			&apos;N/A&apos;
		)
)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>