force-app/main/default/objects/Aha_Idea_Link__c/fields/Aha_Idea_Number__c.field-meta.xml
<CustomField>
    <fullName>Aha_Idea_Number__c</fullName>
    <description>This field will be used to store the Idea Unique Id Field Value</description>
    <formula>Aha_Ideas__r.Aha_Unique_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aha Idea Number</label>
    <type>Text</type>
</CustomField>