force-app/main/default/objects/Aha_Idea_Link__c/fields/Aha_Ideas__c.field-meta.xml
<CustomField>
    <fullName>Aha_Ideas__c</fullName>
    <description>This field is used to store the Aha Idea Id</description>
    <label>Aha Ideas</label>
    <referenceTo>Aha_Ideas__c</referenceTo>
    <relationshipLabel>Aha Idea Links</relationshipLabel>
    <relationshipName>Aha_Idea_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>