force-app/main/default/objects/Aha_Idea_Link__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the Case Id</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Aha Idea Links</relationshipLabel>
    <relationshipName>Aha_Idea_Links</relationshipName>
    <type>Lookup</type>
</CustomField>