force-app/main/default/objects/Aha_Idea_Link__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>CS21-3714: This formula field displays the feature name from the related AHA Idea</description>
    <formula>Aha_Ideas__r.Feature_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Name</label>
    <type>Text</type>
</CustomField>