force-app/main/default/objects/Aha_Idea_Link__c/fields/Feature_Status__c.field-meta.xml
<CustomField>
    <fullName>Feature_Status__c</fullName>
    <description>CS21-3714: This formula field displays the feature status from the related AHA Idea</description>
    <formula>TEXT(Aha_Ideas__r.Feature_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Status</label>
    <type>Text</type>
</CustomField>