force-app/main/default/objects/Aha_Idea_Link__c/fields/Idea_Status__c.field-meta.xml
<CustomField>
    <fullName>Idea_Status__c</fullName>
    <formula>TEXT(Aha_Ideas__r.Status__c)</formula>
    <label>Idea Status</label>
    <type>Text</type>
</CustomField>