force-app/main/default/objects/Aha_Idea_Link__c/fields/Is_Account_Strategic__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Strategic__c</fullName>
    <description>This Field is used to show the Account strategic value of Case or Opportunity which is linked with the Idea.</description>
    <formula>IF(
NOT(ISBLANK(Case_Number__c)),
Case_Number__r.Account.Strategic_Account__c,
IF(
NOT(ISBLANK(Opportunity_Name__c)),
Opportunity_Name__r.Account.Strategic_Account__c ,
False
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account Strategic</label>
    <type>Checkbox</type>
</CustomField>