force-app/main/default/objects/Aha_Idea_Link__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the Opportunity Id</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Aha Idea Links</relationshipLabel>
    <relationshipName>Aha_Idea_Links</relationshipName>
    <type>Lookup</type>
</CustomField>