force-app/main/default/objects/Aha_Idea_Link__c/validationRules/Show_Error_message.validationRule-meta.xml
<ValidationRule>
    <fullName>Show_Error_message</fullName>
    <active>false</active>
    <errorConditionFormula>True</errorConditionFormula>
    <errorDisplayField>Aha_Ideas__c</errorDisplayField>
    <errorMessage>Error message printed</errorMessage>
</ValidationRule>